# chess-llm-lab

./: README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/scripts/: test_move.py
backend/src/: main.py
backend/src/api/: endpoints.py
backend/src/core/: config.py  logging_config.py
backend/src/models/: schemas.py
backend/src/tests/: conftest.py  test_api.py
frontend/: Dockerfile  README.md  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: index.html  styles.css
frontend/src/app/: app.html  app.spec.ts  app.ts
frontend/src/app/models/: game-mode.ts  move-response.interface.ts
frontend/src/app/services/: chess-api.service.spec.ts  chess-api.service.ts
