[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "langchain-openai>=1.1.7",
    "openai>=2.14.0",
    "pydantic>=2.12.5",
    "python-chess>=1.999",
    "uvicorn>=0.39.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.36.2",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]
